<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">记账本</string>
    <string name="version">账本 - V2.0.0</string>
    <string name="copyright">&#169;2014- lan ALl Rights Reserved.</string>
    <string name="web">网页版-http://bill.nexusy.com</string>
    
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="username_length">用户名必须在4&#8211;20个字符之间</string>
    <string name="password_length">密码必须在6&#8211;20个字符之间</string>
    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="remember">记住用户名密码</string>
    <string name="logining">正在登录，请稍候…</string>
    <string name="loginfailed">登录失败</string>
    <string name="signupfailed">注册失败</string>
    <string name="samename">该用户名已被注册</string>
    <string name="networkunavailable">网络连接不可用</string>
    <string name="add">记账</string>
    <string name="bill">账本</string>
    <string name="user">用户</string>
    <string name="query">查询</string>
    <string name="date">日期</string>
    <string name="item">名目</string>
    <string name="remark">备注</string>
    <string name="money">金额</string>
    <string name="income">收入</string>
    <string name="pay">支出</string>
    <string name="type">类型</string>
    <string name="billsuccess">添加账单成功</string>
    <string name="billfailed">添加账单失败</string>
    <string name="del">删除</string>
    <string name="summary">合计</string>
    <string name="itemempty">名目不能为空</string>
    <string name="moneyempty">金额不能为空</string>
    <string name="adding">正在添加，请稍后……</string>
    <string name="loading">数据加载中，请稍后……</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="account">用户名</string>
    <string name="modify">修改</string>
    <string name="last_month">上月</string>
    <string name="next_month">下月</string>
    <string name="modifying">正在修改密码，请稍候…</string>
    <string name="modify_password_success">修改密码成功</string>
    <string name="modify_password_fail">修改密码失败</string>
    <string name="blank"></string>

</resources>