<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
	android:paddingRight="10dip"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <Button 
        android:id="@+id/add_button"
        android:layout_width="0dip" 
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:background="@android:color/transparent"
        />
    <TextView 
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="@string/app_name"/>
        
    <Button 
        android:id="@+id/query_button"
        android:layout_width="0dip" 
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/query"
        android:textColor="@android:color/white"
        android:background="@android:color/transparent"
        />
    
</LinearLayout>