<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BillActivity" >

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/menu_bar_bg"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" >

        <Button
            android:id="@+id/menu_list"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/list_grey"
            android:text="@string/bill"
            android:textColor="@color/menu_grey"
            android:textSize="12sp" />

        <Button
            android:id="@+id/menu_bill"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/bill_green"
            android:text="@string/add"
            android:textColor="@color/menu_green"
            android:textSize="12sp" />

        <Button
            android:id="@+id/menu_user"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/me_grey"
            android:text="@string/user"
            android:textColor="@color/menu_grey"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date" />

        <EditText
            android:id="@+id/date"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/item" />

        <EditText
            android:id="@+id/item"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item2"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/money" />

        <EditText
            android:id="@+id/money"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item3"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/remark" />

        <EditText
            android:id="@+id/remark"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item4"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/type" />

        <RadioGroup
            android:id="@+id/type"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:checkedButton="@+id/pay"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/pay"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pay" />

            <RadioButton
                android:id="@+id/income"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/income" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item5"
        android:layout_centerHorizontal="true"
        android:background="@drawable/green_button"
        android:text="@string/add"
        android:textColor="@android:color/white" />

</RelativeLayout>