<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BillActivity" >

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:background="@drawable/menu_bar_bg"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" >

        <LinearLayout
            android:id="@+id/menu_list"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:background="@drawable/list_grey"
                android:gravity="center"
                android:textColor="@color/menu_grey"
                android:duplicateParentState="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:text="@string/bill"
                android:textColor="@color/menu_grey"
                android:duplicateParentState="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_bill"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:background="@drawable/bill_grey"
                android:gravity="center"
                android:textColor="@color/menu_grey"
                android:duplicateParentState="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:text="@string/add"
                android:textColor="@color/menu_grey" 
                android:duplicateParentState="true"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_user"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:background="@drawable/me_green"
                android:gravity="center"
                android:textColor="@color/menu_green"
                android:duplicateParentState="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:text="@string/user"
                android:textColor="@color/menu_green"
                android:duplicateParentState="true" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/old_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/old_password"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/modify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/green_button"
        android:text="@string/modify"
        android:textColor="@android:color/white" />

</RelativeLayout>