<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity" >

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar_bg"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/prev_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/prev"
            android:text="@string/last_month"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/next"
            android:text="@string/next_month"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/menu_bar_bg"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp" >

        <Button
            android:id="@+id/menu_list"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/list_green"
            android:text="@string/bill"
            android:textColor="@color/menu_green"
            android:textSize="12sp" />

        <Button
            android:id="@+id/menu_bill"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/bill_grey"
            android:text="@string/add"
            android:textColor="@color/menu_grey"
            android:textSize="12sp" />

        <Button
            android:id="@+id/menu_user"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/me_grey"
            android:text="@string/user"
            android:textColor="@color/menu_grey"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/nav"
        android:background="@android:color/background_light"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:text="@string/summary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/total_income"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="right"
            android:maxLines="1"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:textColor="@color/holo_green_dark"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/total_pay"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="right"
            android:maxLines="1"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:textColor="@color/holo_red_dark"
            android:textSize="16sp" />
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/bills"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/title_bar"
        android:background="@android:color/background_light"
        android:groupIndicator="@android:color/transparent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >
    </ExpandableListView>

</RelativeLayout>